# Fidelis

./: .gitignore  Makefile  README.md  count-contributor-share.sh  count-loc.sh  package-lock.json  package.json
apps/api/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
apps/api/app/: main.py  router.py
apps/api/app/api/: router.py
apps/api/app/api/routes/: artists.py  auth.py  events.py  users.py  venues.py
apps/api/app/core/: auth.py  config.py  jwks.py
apps/api/app/db/: supabase.py  supabase_admin.py
apps/api/app/models/: artist_schemas.py  claims_schemas.py  event_schemas.py  favorite_schemas.py  follow_schemas.py  profile_schemas.py  schemas.py  venue_schemas.py
apps/api/app/repositories/: __init__.py  artists.py  events.py  notifications.py  venues.py
apps/api/app/routes/: artists.py  auth.py  claims.py  discovery.py  events.py  external_events.py  favorites.py  follows.py  health.py  profiles.py  scraper.py  users.py  venues.py
apps/api/app/services/: discovery_service.py  external_events.py  zip_index.py
apps/api/app/services/scraper/: __init__.py  ai_service.py  config.py  html_extractor.py  multi_page_scraper.py  queue_service.py  schemas.py  scraper_service.py  structured_data_extractor.py  utils.py  worker.py
apps/api/data/: zip_centroids.csv
apps/api/tests/: conftest.py  test_auth_artist_management.py  test_auth_enforcement.py  test_auth_signup.py  test_auth_venue_management.py  test_claims.py  test_event_id_compat.py  test_events_search.py  test_follows_venues.py  test_profiles.py  test_public_lists.py
(+124 files in other folders)
