[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fidelis-api"
version = "0.1.0"
description = "LIVEY backend API"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic-settings>=2.0.0,<3.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "supabase>=2.4.0,<3.0.0",
  "websockets>=13.0,<16.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
